<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.demo.ms.mvcandmvpcomparedemo.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:textSize="16sp"
        android:textColor="@color/black_text_title_b"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_introduce" />
    <Button
        android:id="@+id/btn_mvc"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"
        android:text="@string/action_mvc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_mvp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:layout_marginTop="15dp"
        android:text="@string/action_mvp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
