<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_username"
                android:layout_margin="12dp"
                android:layout_marginTop="20dp"
                android:hint="@string/et_hint_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_pwd"
                android:layout_margin="12dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:hint="@string/et_hint_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_save"
                android:layout_margin="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn_str"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_clear"
                android:layout_margin="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn_str2"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_margin="12dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_pwd"
                android:layout_margin="12dp"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        <View
            android:background="@color/line_background_color"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
            <TextView
                android:id="@+id/tv_model_desc"
                android:layout_margin="12dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:lineSpacingExtra="8sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>

